--- a/src/main/resources/lang/locales/english.json
+++ b/src/main/resources/lang/locales/english.json
@@ -135,7 +135,9 @@
   "panel_event_display_type_title": "%type% - %selCount% selected",
   "menu_edit": "Edit",
   "menu_edit_undo": "Undo",
+  "menu_edit_undo_operation_exists": "Undo %operation%",
   "menu_edit_redo": "Redo",
+  "menu_edit_redo_operation_exists": "Redo %operation%",
   "menu_edit_cut": "Cut",
   "menu_edit_copy": "Copy",
   "menu_edit_paste": "Paste",
@@ -255,5 +257,21 @@
   "panel_event_display_render_beats": "Render Beats",
   "frame_new_project_prog_stripping_metadata": "Stripping audio metadata...",
   "frame_new_project_err_stripping_metadata_failed": "An exception occurred while removing metadata from the audio file!\n\nDetails:\n%exception%",
-  "frame_map_import_err_stripping_metadata_failed": "An exception occurred while removing metadata from the audio file!\n\nDetails:\n%exception%"
+  "frame_map_import_err_stripping_metadata_failed": "An exception occurred while removing metadata from the audio file!\n\nDetails:\n%exception%",
+  "reversible_operation_resource_mod": "Modify Resource",
+  "reversible_operation_resource_add": "Create Resource",
+  "reversible_operation_resource_delete": "Delete Resource",
+  "reversible_operation_event_create": "Create Event",
+  "reversible_operation_event_delete": "Delete Event",
+  "reversible_operation_event_move": "Move Event",
+  "reversible_operation_timing_event_length_mod": "Set Timing Event Length",
+  "reversible_operation_timing_event_root_time_mod": "Set Timing Event Root Time",
+  "reversible_operation_event_group_create": "Create Event Group",
+  "reversible_operation_event_group_delete": "Delete Event Group",
+  "reversible_operation_event_group_move": "Move Event Group",
+  "reversible_operation_checkpoint_create": "Create Checkpoint",
+  "reversible_operation_checkpoint_delete": "Delete Checkpoint",
+  "reversible_operation_checkpoint_move": "Move Checkpoint",
+  "reversible_operation_event_data_mod": "Edit Event",
+  "reversible_operation_event_group_data_mod": "Edit Event Group"
 }
