--- a/src/main/resources/lang/locales/english.json
+++ b/src/main/resources/lang/locales/english.json
@@ -33,7 +33,7 @@
   "frame_about_text_about_header": "About",
   "frame_about_text_about": "Original program by CorruptTurret\nv0.0.8 maintenance by Riina\nv0.0.9+ hosted on GitHub at\nhttps://github.com/cyriaca-technologies/IRiina",
   "frame_about_text_contact_header": "Contact",
-  "frame_about_text_contact": "Discord:\nhttps://discord.gg/425Me2c\n",
+  "frame_about_text_contact": "Discord:\nDušan Nemec#7851\n",
   "frame_about_text_licenses_header": "Licenses",
   "ui_dialog_information": "Information",
   "ui_dialog_error": "Error",
@@ -124,9 +124,12 @@
   "panel_event_display_render_arcs": "Render Arcs",
   "panel_event_display_render_events": "Render Events / Checkpoints",
   "panel_event_display_scale": "Scale Events",
-  "frame_control_reference_text": "Shortcuts\n\nPlay / pause - F8\nRewind 5 seconds - F7\nForward 5 seconds - F9\nMove to previous event - Cmd + [\nMove to next event - Cmd + ]\nUndo operation - Cmd + Z\nRedo operation - Cmd + Shift + Z\nDelete arc selection - Cmd + Delete\n\n\nPlayback control bar\n\nSet playback location - Left Mouse\nPlay / pause - Right Mouse\n\n\nEvent display window\n\nDelete arc - Shift + Left Mouse\nDelete checkpoint - Ctrl + Left Mouse\nMove checkpoint - Shift + Ctrl + Left Mouse\nMove closest event (or selection) - Left Mouse drag\nNew selection - Right Mouse drag\nAdditive selection - Shift + Right Mouse drag\nSubtractive selection - Ctrl + Right Mouse drag\nInverse selection - Shift + Ctrl + Right Mouse drag\n\n\nEvent display window with keyboard focus\n\nCreate checkpoint - F\nCreate \"Up\" arc - W\nCreate \"Left\" arc - A\nCreate \"Down\" arc - S\nCreate \"Right\" arc - D\nCreate timing event - Q\nCreate title event - E\nCreate background/foreground event - Z\nCreate distance modifier event - X\nCreate color event - C\nCreate combo event - R\nCreate \"Left-Up-Right\" arc - Shift + W\nCreate \"Up-Right\" arc - Shift + E\nCreate \"Up-Right-Down\" arc - Shift + D\nCreate \"Right-Down\" arc - Shift + C\nCreate \"Right-Down-Left\" arc - Shift + X\nCreate \"Down-Left\" arc - Shift + Z\nCreate \"Down-Left-Up\" arc - Shift + A\nCreate \"Left-Up\" arc - Shift + Q\nCreate \"Up-Right-Down-Left\" arc - Shift + S\nCreate \"Up-Down\" arc - Shift + R\nCreate \"Left-Right\" arc - Shift + F",
+  "panel_event_display_remap_mode": "Remapping Mode",
+  "frame_control_reference_text": "Shortcuts\n\nPlay / pause - F8\nRewind 5 seconds - F7\nForward 5 seconds - F9\nMove to previous event - Cmd + [\nMove to next event - Cmd + ]\nUndo operation - Cmd + Z\nRedo operation - Cmd + Shift + Z\nDelete arc selection - Cmd + Delete\n\n\nPlayback control bar\n\nSet playback location - Left Mouse\nPlay / pause - Right Mouse\n\n\nEvent display window\n\nDelete arc - Shift + Left Mouse\nDelete checkpoint - Ctrl + Left Mouse\nMove checkpoint - Shift + Ctrl + Left Mouse\nMove closest event (or selection) - Left Mouse drag\nNew selection - Right Mouse drag\nAdditive selection - Shift + Right Mouse drag\nSubtractive selection - Ctrl + Right Mouse drag\nInverse selection - Shift + Ctrl + Right Mouse drag\n\n\nEvent display window with keyboard focus\n\nCreate checkpoint - F\nCreate \"PowerUp\" arc - G\nCreate \"Up\" arc - W\nCreate \"Left\" arc - A\nCreate \"Down\" arc - S\nCreate \"Right\" arc - D\nCreate timing event - Q\nCreate title event - E\nCreate background/foreground event - Z\nCreate distance modifier event - X\nCreate color event - C\nCreate combo event - R\nCreate \"Left-Up-Right\" arc - Shift + W\nCreate \"Up-Right\" arc - Shift + E\nCreate \"Up-Right-Down\" arc - Shift + D\nCreate \"Right-Down\" arc - Shift + C\nCreate \"Right-Down-Left\" arc - Shift + X\nCreate \"Down-Left\" arc - Shift + Z\nCreate \"Down-Left-Up\" arc - Shift + A\nCreate \"Left-Up\" arc - Shift + Q\nCreate \"Up-Right-Down-Left\" arc - Shift + S\nCreate \"Up-Down\" arc - Shift + R\nCreate \"Left-Right\" arc - Shift + F",
   "panel_event_display_state_recording": "Recording events...",
+  "panel_event_display_state_recording_remap": "Recording arc remaps...",
   "panel_event_display_state_waiting": "Click to record events...",
+  "panel_event_display_state_waiting_remap": "Click to remap arcs...",
   "frame_editor_exit_title": "Exit Editor",
   "frame_editor_exit_confirm": "Do you want to save your map before exiting?",
   "frame_editor_exit_option_save": "Save map",
@@ -200,6 +203,8 @@
   "frame_editor_export_option_cancel": "Cancel",
   "frame_editor_export_editor_directory_select": "Select editor directory",
   "frame_editor_export_folder_name": "Folder name",
+  "frame_editor_export_checkpoint_timing_offset": "Checkpoint timing offset",
+  "frame_editor_export_event_timing_offset": "Event timing offset",
   "frame_editor_export_fail_no_editor_directory": "No editor directory specified!",
   "frame_editor_export_fail_no_folder_name": "No folder name specified!",
   "frame_editor_export_fail_target_is_file": "Target path %targetPath% is a file! It must either be an existing directory or not exist!",
