--- a/src/main/resources/lang/locales/english.json
+++ b/src/main/resources/lang/locales/english.json
@@ -12,6 +12,8 @@
   "event_show_sprite_property_pos": "Position",
   "event_show_sprite_property_keep_aspect_ratio": "Keep Aspect Ratio",
   "event_show_sprite_property_duration": "Duration",
+  "event_show_sprite_property_fade_in_duration": "Fade-In Duration",
+  "event_show_sprite_property_fade_out_duration": "Fade-Out Duration",
   "event_spawn_obj_hr_name": "Spawn Object",
   "frame_pre_welcome_title": "Setup - IRiina",
   "frame_pre_welcome_text_language": "Set language",
@@ -165,6 +167,7 @@
   "frame_editor_copying_icon": "Copying icon to project directory...",
   "menu_edit_delete": "Delete Selected Events",
   "menu_edit_select_all": "Select All Events",
+  "menu_edit_sequence_selection": "Sequence Selection...",
   "frame_editor_component_map_info_title": "Map Info",
   "frame_editor_component_map_info_name": "Name",
   "frame_editor_component_map_info_description": "Info",
@@ -212,6 +215,11 @@
   "frame_editor_export_success": "Project export to folder \"%targetDirectory%\" successful!",
   "frame_editor_export_fail_target_directory_creation_fail": "Creation of map folder \"%targetDirectory%\" failed!",
   "frame_editor_error_invalid_resource": "%eventName% event at time %eventTime% with data \"%eventData%\" references an invalid resource name \"%resourceName%\"\nValid resource names: %resourceNameList%",
+  "frame_editor_sequence_selection_title": "Sequence Selection",
+  "frame_editor_sequence_selection_base_tick": "Base tick",
+  "frame_editor_sequence_selection_tick_separation": "Tick separation",
+  "frame_editor_sequence_selection_option_confirm": "Sequence",
+  "frame_editor_sequence_selection_option_cancel": "Cancel",
   "event_set_b_g_color_property_rgb": "Color",
   "panel_event_mod_type_left_right_arc_and_combo": "Left/Right Arc&Combo",
   "panel_event_mod_type_combo_and_arc_with_timing": "Combo&Arc + Timing",
