--- a/src/main/resources/lang/locales/english.json
+++ b/src/main/resources/lang/locales/english.json
@@ -165,9 +165,12 @@
   "menu_controls_evt_back": "Previous Event",
   "menu_controls_evt_fwd": "Next Event",
   "frame_editor_copying_icon": "Copying icon to project directory...",
+  "menu_edit_write_changes_top": "Write Changes to Left Event",
+  "menu_edit_write_changes_bot": "Write Changes to Right Event",
   "menu_edit_delete": "Delete Selected Events",
   "menu_edit_select_all": "Select All Events",
   "menu_edit_sequence_selection": "Sequence Selection...",
+  "menu_edit_generate_sequence": "Generate Sequence...",
   "frame_editor_component_map_info_title": "Map Info",
   "frame_editor_component_map_info_name": "Name",
   "frame_editor_component_map_info_description": "Info",
@@ -217,9 +220,17 @@
   "frame_editor_error_invalid_resource": "%eventName% event at time %eventTime% with data \"%eventData%\" references an invalid resource name \"%resourceName%\"\nValid resource names: %resourceNameList%",
   "frame_editor_sequence_selection_title": "Sequence Selection",
   "frame_editor_sequence_selection_base_tick": "Base tick",
+  "frame_editor_sequence_selection_base_measure": "Base measure",
+  "frame_editor_sequence_selection_base_beat": "Base beat",
+  "frame_editor_sequence_selection_base_subtick": "Base subbeat",
   "frame_editor_sequence_selection_tick_separation": "Tick separation",
+  "frame_editor_sequence_selection_subtick_separation": "Subbeat separation",
+  "frame_editor_generate_sequence_title": "Generate Sequence",
+  "frame_editor_generate_sequence_event_count": "Event count",
   "frame_editor_sequence_selection_option_confirm": "Sequence",
   "frame_editor_sequence_selection_option_cancel": "Cancel",
+  "frame_editor_generate_sequence_option_confirm": "Generate",
+  "frame_editor_generate_sequence_option_cancel": "Cancel",
   "event_set_b_g_color_property_rgb": "Color",
   "panel_event_mod_type_left_right_arc_and_combo": "Left/Right Arc&Combo",
   "panel_event_mod_type_combo_and_arc_with_timing": "Combo&Arc + Timing",
@@ -259,12 +270,12 @@
   "key_panel_timed_event_property_elem_tick_tick": "Tick",
   "key_panel_timed_event_property_elem_measure_measure": "Measure",
   "key_panel_timed_event_property_elem_measure_beat": "Beat",
-  "key_panel_timed_event_property_elem_sub_tick": "Subtick",
+  "key_panel_timed_event_property_elem_sub_tick": "Subbeat",
   "key_panel_timed_event_property_elem_release_button": "Unsync Event",
   "key_panel_timing_property_elem_root_time": "Root time",
   "key_panel_timing_property_elem_length": "Length",
   "panel_timing_property_mode_selector_name": "Timing mode",
-  "panel_timing_property_mode_selector_value_measure_name": "Measure, Beat, and Subtick",
+  "panel_timing_property_mode_selector_value_measure_name": "Measure, Beat, and Subbeat",
   "panel_timing_property_mode_selector_value_tick_name": "Tick Only",
   "panel_timed_event_timing_event_not_found": "Timing Event %timingEventMetaId% Not Found",
   "panel_event_display_render_beats": "Render Beats",
